--- a/templates/coffee.html
+++ b/templates/coffee.html
@@ -184,7 +184,7 @@
     <div class="container" id="countdown-ui">
         <div class="content-wrapper">
             <div class="illustration">
-                <img src="man_with_coffee_image.png" alt="man_with_coffee_image" />
+                <img src="../static/images/man_with_coffee_image.png" alt="man_with_coffee_image" />
             </div>
 
             <div class="right-content">
